--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,29 @@
+apispec==6.3.0
+apispec-webframeworks==0.5.2
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0   
+click==8.1.7
+colorama==0.4.6
 dnspython==2.4.2
+Flask==2.3.3
+googlemaps==4.10.0
+idna==3.4
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+marshmallow==3.20.1
 motor==3.3.1
+numpy==1.24.4
+packaging==23.1
 pymongo==4.5.0
 python-dotenv==1.0.0
+PyYAML==6.0.1
+requests==2.31.0
+swagger-ui-py==23.9.23
 tornado==6.3.3
-googlemaps==4.10.0
+tornado-swagger==1.5.0
+urllib3==2.0.5
+Werkzeug==2.3.7
+zipp==3.17.0
